# AQA_Kunilov

./: readme.md
AQA_Kunilov/: CMakeLists.txt  ColorVectorImage.qml  IconSets.qml  Main.qml  PulsingImage.qml  RoundedButton.qml  RoundedTextButton.qml  Theme.qml  backend.cpp  backend.h  main.cpp
